main_application/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mainapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mainapp
  template:
    metadata:
      labels:
        app: mainapp
    spec:
      volumes:
        - name: shared-pong
          persistentVolumeClaim:
            claimName: pong-claim
      containers:
        - name: mainapp
          image: markokoskinen2019/dwk-main_app:v8
          volumeMounts:
          - name: shared-pong
            mountPath: /usr/src/app/files
