main_application/manifests/mainapp_frontend_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainapp-svc
  namespace: project
spec:
  type: NodePort
  selector:
    app: mainapp
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mainapp-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mainapp
  template:
    metadata:
      labels:
        app: mainapp
    spec:
      containers:
        - name: mainapp
          image: markokoskinen2019/dwk-main_app:v24
          resources:
            limits:
              cpu: "500m"
              memory: "50Mi"
